使用 Colaboratory 建立

--- a/Task_07_作業_01_【實作題】口罩資料_API_串接.ipynb
+++ b/Task_07_作業_01_【實作題】口罩資料_API_串接.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFDllbvAWMY7aP1pWmNCLJ",
+      "authorship_tag": "ABX9TyNK8lOrv9qHi3pxS5ze/jp5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,143 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CGXGC/Task-07-01-API-/blob/main/Task_07_%E4%BD%9C%E6%A5%AD_01_%E3%80%90%E5%AF%A6%E4%BD%9C%E9%A1%8C%E3%80%91%E5%8F%A3%E7%BD%A9%E8%B3%87%E6%96%99_API_%E4%B8%B2%E6%8E%A5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "# 利用 requests 對 API 來源發送一個請求\n",
+        "url = 'https://raw.githubusercontent.com/kiang/pharmacies/master/json/points.json'\n",
+        "response = requests.get(url)\n",
+        "\n",
+        "# 將請求回應的內容存成一個字串格式\n",
+        "d = response.text\n",
+        "\n",
+        "# 將長得像 json 格式的字串解析成字典或列表\n",
+        "data = json.loads(d)\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TfNdaegsnLKv",
+        "outputId": "0277a94e-614f-44de-bb70-e124a285350a"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "IOPub data rate exceeded.\n",
+            "The notebook server will temporarily stop sending output\n",
+            "to the client in order to avoid crashing it.\n",
+            "To change this limit, set the config variable\n",
+            "`--NotebookApp.iopub_data_rate_limit`.\n",
+            "\n",
+            "Current values:\n",
+            "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+            "NotebookApp.rate_limit_window=3.0 (secs)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "med_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for d in data['features']:\n",
+        "    conunty = d['properties']['address'][0:3]\n",
+        "    if conunty not in med_count:\n",
+        "        med_count[conunty] = 1\n",
+        "    else:\n",
+        "        med_count[conunty] += 1\n",
+        "\n",
+        "print(med_count)\n",
+        "# {'台北市': 123, '新北市': 456 ...}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W57wLRvcnWiq",
+        "outputId": "d568e3fc-49c5-4c8a-89d7-8e082a7b9687"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'臺北市': 340, '高雄市': 424, '臺中市': 436, '臺南市': 280, '基隆市': 57, '新竹市': 39, '嘉義市': 67, '新北市': 507, '桃園市': 271, '新竹縣': 48, '宜蘭縣': 76, '苗栗縣': 57, '彰化縣': 181, '南投縣': 67, '雲林縣': 131, '嘉義縣': 84, '屏東縣': 140, '澎湖縣': 11, '花蓮縣': 47, '臺東縣': 23, '金門縣': 6, '連江縣': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mask_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for d in data['features']:\n",
+        "    conunty = d['properties']['address'][0:3]\n",
+        "    if conunty not in mask_count:\n",
+        "        mask_count[conunty] = d['properties']['mask_adult'] \n",
+        "    else:\n",
+        "        mask_count[conunty] = mask_count[conunty] + d['properties']['mask_adult']\n",
+        "print(mask_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EbmQzDdencpB",
+        "outputId": "e4382db3-11f7-447b-fbf4-c387bbca5f7a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'臺北市': 323660, '高雄市': 428940, '臺中市': 556440, '臺南市': 408400, '基隆市': 80100, '新竹市': 45630, '嘉義市': 107840, '新北市': 677660, '桃園市': 345600, '新竹縣': 53760, '宜蘭縣': 106900, '苗栗縣': 134180, '彰化縣': 219400, '南投縣': 91240, '雲林縣': 199470, '嘉義縣': 113180, '屏東縣': 184250, '澎湖縣': 12600, '花蓮縣': 57330, '臺東縣': 28510, '金門縣': 15510, '連江縣': 7930}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 將結果從大到小排列\n",
+        "med_count = dict(sorted(mask_count.items(), key=lambda item: item[1],reverse = True))\n",
+        "\n",
+        "print(med_count)\n",
+        "# {'台北市': 12345, '新北市': 45678 ...}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KJQD1rfAnirC",
+        "outputId": "6c245645-e64f-44bb-f576-afe8dc0f97d2"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'新北市': 677660, '臺中市': 556440, '高雄市': 428940, '臺南市': 408400, '桃園市': 345600, '臺北市': 323660, '彰化縣': 219400, '雲林縣': 199470, '屏東縣': 184250, '苗栗縣': 134180, '嘉義縣': 113180, '嘉義市': 107840, '宜蘭縣': 106900, '南投縣': 91240, '基隆市': 80100, '花蓮縣': 57330, '新竹縣': 53760, '新竹市': 45630, '臺東縣': 28510, '金門縣': 15510, '澎湖縣': 12600, '連江縣': 7930}\n"
+          ]
+        }
       ]
     }
   ]
