--- a/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
+++ b/Task_09_作業_01_【實作題】新聞語料關鍵字分析.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv7D8Pf7cSlXUvpXRlpIzh",
+      "authorship_tag": "ABX9TyMBGhW8sDOiySEcHjBSFq9E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hdf74cx_RSyd",
-        "outputId": "cfb0f125-0640-407b-f459-74a60e3b9c21"
+        "outputId": "9ca7a328-2ffb-4eb4-86c3-df0b0fb84604"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "蔡英文總統執政將滿7年，台灣民意基金會今天公布「國人對蔡英文總統執政7年的評價」民調，結果顯示總平均成績是60.29分，台灣民意基金會董事長游盈隆表示，這傳達了一個重要的訊息，那就是對於蔡總統執政7年，全民的總評價是勉強及格，有濃濃的「沒有功勞也有苦勞」味道。 \r 民調細項顯示，28.9%受訪者覺得蔡總統執政7年成績非常好，給80分以上；13.9%覺得還算好，給61-79分；18.9%覺得普普通通，給60分；16%覺得不太好，給50-59分；18.6%覺得一點也不好，給0-49分。            \r 從政黨支持傾向看，不同政黨支持者，對蔡總統執政七年的表現，有截然不同的觀感與評價。具體地講，民進黨支持者給出平均分數79.47分；國民黨支持者給出平均分數45.15分；民眾黨支持者給出平均分數48.05分；時代力量支持者給出平均分數65.26 分；中性選民給出平均分數57.05分。 \r 游盈隆表示，對蔡總統執政七年的表現，國人呈現五光十色的觀感與評價，因年齡、教育、省籍、階級、政黨及居住地的不同而不同，這本是一個多元民主社會的常態。但對一個執政已經七年，並期盼獲得接下來四年或更久執政機會的政黨而言，眼前整體民意反應的確有諸多值得反省警惕之處。 \r 本次調查由游盈隆負責問卷設計、報告撰寫；山水民意研究公司接受委託，主要負責抽樣設計、電話訪談與統計分析。訪問期間是5月8、9日兩天；對象是以全國為範圍的20歲以上成年人；抽樣方法是以全國住宅電話用戶為抽樣架構，以系統抽樣加尾數兩碼隨機方式抽樣；有效樣本1076人；抽樣誤差在95%信心水準下約正負3個百分點。台灣民意基金會今天公布「國人對蔡英文總統執政7年的評價」民調，結果顯示總平均成績是60.29分。圖／台灣民意基金會提供    蔡英文 游盈隆 民調\n"
+            "['台中捷運公司今天說明昨天事發經過。在12:27分一名外籍人士發現前方軌道有異狀，隨即通知隨車人員，隨車員呼叫行控中心，拿鑰匙要執行手動緊急停車作業，但13秒後已撞上，旅客雖有防護動作，仍發生1死10傷事故。 \\r 時間序如下：  12:26:50 列車進入豐樂公園站二月台。             12:27:04 站外建案吊車吊臂砸到隔音牆。  12:27:05 列車進站停妥二月台，吊臂掉落軌道區。  12:27:05到12:27:14 保全聽到一場聲響回頭確認軌道區的狀況，花了9秒。  12:27:24到12:27:40 保全察覺軌道有異狀，以對講機通知站長（花了10秒）隨車人員站立車門旁邊，在月台確認旅客上下車狀況。  12:27:20 隨車人員進入車廂  12:27:22 列車執行關門作業  12:27:22到12:27:26 月台相關人員查看前方狀況出現大量的粉塵  12:27:26 列車關門，外籍旅客與隨車人員發現前方有狀況  約12:27:30 豐樂公園站二月台列車離站  12:27:32 隨車人員發現前方異常，呼叫行控中心並拿鑰匙開啟駕駛台蓋板，執行緊急停車作業  12:27:42 車內旅客開始有防護動作。  12:27:45 列車撞上軌道障礙物。  12:27:48 列車障礙物偵測及緊急剎車  12:27:51 車門非預期開啟  12:27:54 車門障礙物偵測台中捷運今天早上恢復行駛，圖為豐樂公園站。記者陳秋雲/攝影台中捷運今早恢復正常行駛，並說明事發經過。記者陳秋雲/攝影    台中捷運 興富發', '有些人說話很敢講，他們會把「黑的說成白的」，明明沒有的事情也能「說得像真的一樣」，而且沒有放心上。命理網站旺好運分享「「這些星座真的有張唬爛嘴？」，快看看有那些星座上榜，他們說話你聽聽就好，千萬別當真，不然受傷的就是你。   \\r 第三名：水瓶座 \\r 水瓶座非常喜歡靠感覺行事，因此有時候說的跟做的總是不同，雖然不是有意的，但也因此得罪了不少人，會讓人覺得說的時候很會說，但真的要執行起來卻是很大的問題。            第二名：射手座 \\r 射手座想法比較天真，以為對別人說過的話，都可以不用負責，認為別人都不知道自己的一舉一動，但其實大家都非常清楚，因此會令人有種做人不誠懇的感覺。  第一名：雙子座 \\r 雙子座頭腦反應很快，且很聰穎，是出了名「靠嘴吃飯」的一群人，但他們對於自己說出來的話都不負責任，總是為了達到某些效果誇大其辭，但其實很多事情都不事實。 \\r ◎本文內容已獲 旺好運 授權，未經同意禁止取用轉載。    星座', '一隻狗狗因為擔心住院的主人而「一夜白頭」，原本全黑的毛髮間長出不少白毛，讓飼主感到溫暖又心疼。\\r 陸媒報導，江蘇一名男子養了一隻流浪狗，日前他出意外昏迷而住院十多天，出院返家時竟然發現愛犬長出不少白毛，原本大體為黑色的毛髮現在變成黑白參半。           \\r 男子表示這隻狗狗是從小開始養，毛髮一直都是黑色的，家人跟他說在這段時間狗狗吃得很少，每天都到飼主房間轉，顯然是相當牽掛主人，他聽聞此事非常感動。\\r 網友表示：「一夜白頭？」、「狗狗是天使」、「汪星人和上帝的交易，用一身黑毛換主人平安」、「以後要加倍待牠好喔」、「狗狗就是最重情重義的動物了」。                          想看可愛萌寵、寵物健康保健資訊、教養方法、帶牠們去哪吃喝玩樂，快來加入寵物部落粉絲團！\\r 點我前往：https://www.facebook.com/udnpet', '蔡英文總統執政將滿7年，台灣民意基金會今天公布「國人對蔡英文總統執政7年的評價」民調，結果顯示總平均成績是60.29分，台灣民意基金會董事長游盈隆表示，這傳達了一個重要的訊息，那就是對於蔡總統執政7年，全民的總評價是勉強及格，有濃濃的「沒有功勞也有苦勞」味道。 \\r 民調細項顯示，28.9%受訪者覺得蔡總統執政7年成績非常好，給80分以上；13.9%覺得還算好，給61-79分；18.9%覺得普普通通，給60分；16%覺得不太好，給50-59分；18.6%覺得一點也不好，給0-49分。            \\r 從政黨支持傾向看，不同政黨支持者，對蔡總統執政七年的表現，有截然不同的觀感與評價。具體地講，民進黨支持者給出平均分數79.47分；國民黨支持者給出平均分數45.15分；民眾黨支持者給出平均分數48.05分；時代力量支持者給出平均分數65.26 分；中性選民給出平均分數57.05分。 \\r 游盈隆表示，對蔡總統執政七年的表現，國人呈現五光十色的觀感與評價，因年齡、教育、省籍、階級、政黨及居住地的不同而不同，這本是一個多元民主社會的常態。但對一個執政已經七年，並期盼獲得接下來四年或更久執政機會的政黨而言，眼前整體民意反應的確有諸多值得反省警惕之處。 \\r 本次調查由游盈隆負責問卷設計、報告撰寫；山水民意研究公司接受委託，主要負責抽樣設計、電話訪談與統計分析。訪問期間是5月8、9日兩天；對象是以全國為範圍的20歲以上成年人；抽樣方法是以全國住宅電話用戶為抽樣架構，以系統抽樣加尾數兩碼隨機方式抽樣；有效樣本1076人；抽樣誤差在95%信心水準下約正負3個百分點。台灣民意基金會今天公布「國人對蔡英文總統執政7年的評價」民調，結果顯示總平均成績是60.29分。圖／台灣民意基金會提供    蔡英文 游盈隆 民調']\n"
           ]
         }
       ],
@@ -53,13 +53,131 @@
         "response = requests.get('https://udn.com/news/breaknews/1')\n",
         "soup = BeautifulSoup(response.text)\n",
         "\n",
+        "news = []\n",
+        "\n",
         "for link in soup.find_all('h3', class_='rounded-thumb__title')[:4]:\n",
         "  news_url = link.a['href']\n",
         "  news_response = requests.get('https://udn.com' + news_url)\n",
         "  news_soup = BeautifulSoup(news_response.text)\n",
         "  news_content = news_soup.find('div', class_='article-content__paragraph').text.strip().replace('\\n', ' ')\n",
+        "  news.append(news_content)\n",
+        "print(news)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 安裝 jieba 中文斷詞套件\n",
+        "!pip install jieba \n",
         "\n",
-        "print(news_content)"
+        "# 下載官方字典檔\n",
+        "!wget https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+        "\n",
+        "\n",
+        "# 載入套件與字典檔\n",
+        "import jieba\n",
+        "jieba.load_userdict(\"dict.txt.big\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4mT5nBDiVohh",
+        "outputId": "43ff9e44-3e48-494c-88bc-515150b4d620"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: jieba in /usr/local/lib/python3.10/dist-packages (0.42.1)\n",
+            "--2023-05-11 15:03:27--  https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 8583143 (8.2M) [text/plain]\n",
+            "Saving to: ‘dict.txt.big’\n",
+            "\n",
+            "dict.txt.big        100%[===================>]   8.18M  --.-KB/s    in 0.08s   \n",
+            "\n",
+            "2023-05-11 15:03:27 (105 MB/s) - ‘dict.txt.big’ saved [8583143/8583143]\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Building prefix dict from the default dictionary ...\n",
+            "DEBUG:jieba:Building prefix dict from the default dictionary ...\n",
+            "Dumping model to file cache /tmp/jieba.cache\n",
+            "DEBUG:jieba:Dumping model to file cache /tmp/jieba.cache\n",
+            "Loading model cost 1.221 seconds.\n",
+            "DEBUG:jieba:Loading model cost 1.221 seconds.\n",
+            "Prefix dict has been built successfully.\n",
+            "DEBUG:jieba:Prefix dict has been built successfully.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 精確模式斷詞\n",
+        "word_count = {}\n",
+        "for d in news:\n",
+        "  token = list(jieba.cut(d, HMM=False)) # token = d 字串斷詞結果\n",
+        "  \n",
+        "  for i in token:\n",
+        "    if i not in word_count:\n",
+        "      word_count[i] = 0\n",
+        "    if i in word_count:\n",
+        "      word_count[i] += 1\n",
+        "print(word_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AEWTJfs_Z7TN",
+        "outputId": "fa94ecd1-ea54-4588-e794-0391788a3ac1"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'台': 12, '中': 4, '捷運': 4, '公司': 2, '今天': 4, '說明': 2, '昨天': 1, '事發': 2, '經過': 2, '。': 30, '在': 4, '12': 20, ':': 40, '27': 19, '分': 13, '一名': 2, '外籍人士': 1, '發現': 4, '前方': 4, '軌道': 5, '有': 11, '異狀': 2, '，': 77, '隨即': 1, '通知': 2, '隨車': 6, '人員': 6, '員': 1, '呼叫': 2, '行': 2, '控': 2, '中心': 2, '拿': 2, '鑰匙': 2, '要': 3, '執行': 4, '手動': 1, '緊急停車': 2, '作業': 3, '但': 7, '13': 2, '秒': 3, '後': 1, '已': 2, '撞': 2, '上': 3, '旅客': 4, '雖': 1, '防護': 2, '動作': 2, '仍': 1, '發生': 1, '1': 1, '死': 1, '10': 2, '傷': 1, '事故': 1, ' ': 165, '\\r': 14, '時間': 2, '序': 1, '如下': 1, '：': 6, '26': 4, '50': 2, '列車': 7, '進入': 2, '豐樂': 3, '公園': 3, '站': 6, '二月': 3, '04': 1, '外': 1, '建': 1, '案': 1, '吊車': 1, '吊臂': 2, '砸': 1, '到': 5, '隔音牆': 1, '05': 4, '進站': 1, '停妥': 1, '掉落': 1, '區': 2, '14': 1, '保全': 2, '聽到': 1, '一場': 1, '聲響': 1, '回頭': 1, '確認': 2, '的': 32, '狀況': 4, '花': 2, '了': 7, '9': 5, '24': 1, '40': 1, '察覺': 1, '以': 5, '對講機': 1, '站長': 1, '（': 1, '）': 1, '站立': 1, '車門': 3, '旁邊': 1, '月台': 2, '上下車': 1, '20': 2, '車廂': 1, '22': 2, '關門': 2, '相關': 1, '查看': 1, '出現': 1, '大量': 1, '粉塵': 1, '外籍': 1, '與': 4, '約': 2, '30': 1, '離': 1, '32': 1, '異常': 1, '並': 3, '開': 2, '啟': 2, '駕駛': 1, '蓋板': 1, '42': 1, '車': 1, '內': 1, '開始': 2, '45': 2, '障礙物': 3, '48': 2, '偵測': 2, '及': 2, '緊急': 1, '剎車': 1, '51': 1, '非': 1, '預期': 1, '54': 1, '早上': 1, '恢復': 1, '行駛': 2, '圖': 2, '為': 8, '記者': 2, '陳': 2, '秋': 2, '雲': 2, '/': 5, '攝影': 2, '今': 1, '早': 1, '恢復正常': 1, '興富': 1, '發': 1, '有些': 1, '人': 6, '說話': 2, '很': 3, '敢講': 1, '他們': 3, '會': 4, '把': 1, '「': 14, '黑': 1, '說': 8, '成': 1, '白': 1, '」': 13, '明明': 1, '沒有': 3, '事情': 2, '也': 4, '能': 1, '得': 2, '像': 1, '真的': 3, '一樣': 1, '而且': 1, '放心': 1, '命理網': 1, '旺': 2, '好運': 2, '分享': 1, '這些': 1, '星座': 3, '張': 1, '唬': 1, '爛': 1, '嘴': 2, '？': 2, '快': 1, '看看': 1, '那些': 1, '上榜': 1, '你': 2, '聽聽': 1, '就': 1, '好': 4, '千萬別': 1, '當真': 1, '不然': 1, '受傷': 1, '就是': 3, '第三名': 1, '水瓶座': 2, '非常': 4, '喜歡': 1, '靠': 2, '感覺': 2, '行事': 1, '因此': 3, '有時候': 1, '跟': 2, '做': 1, '總是': 2, '不同': 4, '雖然': 1, '不是': 1, '有意': 1, '得罪': 1, '不少': 3, '讓': 2, '覺得': 6, '時候': 1, '起來': 1, '卻是': 1, '很大': 1, '問題': 1, '第二名': 1, '射手座': 2, '想法': 1, '比較': 1, '天真': 1, '對': 6, '別人': 2, '過': 1, '的話': 2, '都': 7, '可以': 1, '不用': 1, '負責': 3, '認': 1, '不': 3, '知道': 1, '自己': 2, '一舉一動': 1, '其實': 2, '大家': 1, '清楚': 1, '令人': 1, '有種': 1, '做人': 1, '誠懇': 1, '第一名': 1, '雙子座': 2, '頭腦': 1, '反應': 2, '很快': 1, '且': 1, '聰穎': 1, '是': 12, '出了名': 1, '吃飯': 1, '一群': 1, '對於': 2, '出來': 1, '不負責任': 1, '達到': 1, '某些': 1, '效果': 1, '誇大其辭': 1, '很多': 1, '事實': 1, '◎': 1, '本文': 1, '內容': 1, '獲': 1, '授權': 1, '未經': 1, '同意': 1, '禁止': 1, '取用': 1, '轉載': 1, '一隻': 2, '狗狗': 5, '因': 2, '擔心': 1, '住院': 2, '主人': 3, '而': 3, '一夜': 2, '白頭': 2, '原本': 2, '全黑': 1, '毛髮': 3, '間': 1, '長': 2, '出': 3, '白毛': 2, '飼主': 2, '感到': 1, '溫暖': 1, '又': 1, '心疼': 1, '陸': 1, '媒': 1, '報導': 1, '江蘇': 1, '男子': 2, '養': 2, '流浪狗': 1, '日前': 1, '他': 3, '意外': 1, '昏迷': 1, '十多天': 1, '出院': 1, '返家': 1, '時': 1, '竟然': 1, '愛犬': 1, '大體': 1, '黑色': 2, '現在': 1, '變成': 1, '黑白': 1, '參半': 1, '表示': 4, '這': 2, '隻': 1, '從小': 1, '一直': 1, '家人': 1, '這段': 1, '吃': 1, '很少': 1, '每天': 1, '房間': 1, '轉': 1, '顯然': 1, '相當': 1, '牽掛': 1, '聽聞': 1, '此事': 1, '感動': 1, '網友': 1, '、': 14, '天使': 1, '汪': 1, '星': 1, '和': 1, '上帝': 1, '交易': 1, '用': 1, '一身': 1, '黑毛': 1, '換': 1, '平安': 1, '以後': 1, '加倍': 1, '待': 1, '牠': 2, '喔': 1, '最重': 1, '情': 1, '重': 1, '義': 1, '動物': 1, '想': 1, '看': 2, '可愛': 1, '萌': 1, '寵': 1, '寵物': 2, '健康': 1, '保健': 1, '資訊': 1, '教養': 1, '方法': 2, '帶': 1, '們': 1, '去': 1, '哪': 1, '吃喝玩樂': 1, '快來': 1, '加入': 1, '部落': 1, '粉絲團': 1, '！': 1, '點': 1, '我': 1, '前往': 1, 'https': 1, 'www': 1, '.': 13, 'facebook': 1, 'com': 1, 'udnpet': 1, '蔡': 8, '英文': 4, '總統': 7, '執政': 9, '將': 1, '滿': 1, '7': 5, '年': 5, '灣': 4, '民意': 6, '基金會': 4, '公布': 2, '國人': 3, '評價': 4, '民調': 4, '結果顯示': 2, '總': 2, '平均': 7, '成績': 3, '60': 3, '29': 2, '董事長': 1, '游': 4, '盈': 4, '隆': 4, '傳達': 1, '一個': 2, '重要': 1, '訊息': 1, '那': 1, '全民': 1, '總評': 1, '價': 1, '勉強': 1, '及格': 1, '濃濃的': 1, '功勞': 1, '苦勞': 1, '味道': 1, '細': 1, '項': 1, '顯示': 1, '28': 1, '%': 6, '受訪者': 1, '給': 5, '80': 1, '以上': 2, '；': 13, '還': 1, '算': 1, '61': 1, '-': 3, '79': 2, '18': 2, '普普通通': 1, '16': 1, '不太好': 1, '59': 1, '6': 1, '一點': 1, '不好': 1, '0': 1, '49': 1, '從政': 1, '黨': 2, '支持': 1, '傾向': 1, '政黨': 3, '支持者': 5, '七年': 3, '表現': 2, '截然不同': 1, '觀感': 2, '具體': 1, '地': 1, '講': 1, '民進黨': 1, '給出': 5, '分數': 5, '47': 1, '國民黨': 1, '15': 1, '民': 1, '眾': 1, '時代': 1, '力量': 1, '65': 1, '中性': 1, '選民': 1, '57': 1, '呈現': 1, '五光十色': 1, '年齡': 1, '教育': 1, '省籍': 1, '階級': 1, '居住地': 1, '這本': 1, '一個多元': 1, '民主': 1, '社會': 1, '常態': 1, '已經': 1, '期盼': 1, '獲得': 1, '接下來': 1, '四年': 1, '或': 1, '更': 1, '久': 1, '機會': 1, '而言': 1, '眼前': 1, '整體': 1, '的確': 1, '諸多': 1, '值得': 1, '反省': 1, '警惕': 1, '之': 1, '處': 1, '本次': 1, '調查': 1, '由': 1, '問卷': 1, '設計': 2, '報告': 1, '撰寫': 1, '山水': 1, '研究': 1, '接受': 1, '委託': 1, '主要': 1, '抽樣': 4, '電話': 2, '訪談': 1, '統計分析': 1, '訪問期間': 1, '5': 1, '月': 1, '8': 1, '日': 1, '兩天': 1, '對象': 1, '全國': 2, '範圍': 1, '歲': 1, '成年人': 1, '住宅': 1, '用戶': 1, '架構': 1, '系統抽樣': 1, '加': 1, '尾數': 1, '兩碼': 1, '隨機': 1, '方式': 1, '有效': 1, '樣本': 1, '1076': 1, '抽樣誤差': 1, '95': 1, '信心': 1, '水準': 1, '下': 1, '正負': 1, '3': 1, '個': 1, '百分點': 1, '／': 1, '提供': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_count = dict(sorted(word_count.items(), key=lambda item: item[1],reverse = True))\n",
+        "\n",
+        "print(word_count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OcFNq8MjaW_E",
+        "outputId": "8aea21e2-f7f7-4379-9454-85180ca2830e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{' ': 165, '，': 77, ':': 40, '的': 32, '。': 30, '12': 20, '27': 19, '\\r': 14, '「': 14, '、': 14, '分': 13, '」': 13, '.': 13, '；': 13, '台': 12, '是': 12, '有': 11, '執政': 9, '為': 8, '說': 8, '蔡': 8, '但': 7, '列車': 7, '了': 7, '都': 7, '總統': 7, '平均': 7, '隨車': 6, '人員': 6, '：': 6, '站': 6, '人': 6, '覺得': 6, '對': 6, '民意': 6, '%': 6, '軌道': 5, '到': 5, '9': 5, '以': 5, '/': 5, '狗狗': 5, '7': 5, '年': 5, '給': 5, '支持者': 5, '給出': 5, '分數': 5, '中': 4, '捷運': 4, '今天': 4, '在': 4, '發現': 4, '前方': 4, '執行': 4, '旅客': 4, '26': 4, '05': 4, '狀況': 4, '與': 4, '會': 4, '也': 4, '好': 4, '非常': 4, '不同': 4, '表示': 4, '英文': 4, '灣': 4, '基金會': 4, '評價': 4, '民調': 4, '游': 4, '盈': 4, '隆': 4, '抽樣': 4, '要': 3, '作業': 3, '秒': 3, '上': 3, '豐樂': 3, '公園': 3, '二月': 3, '車門': 3, '並': 3, '障礙物': 3, '很': 3, '他們': 3, '沒有': 3, '真的': 3, '星座': 3, '就是': 3, '因此': 3, '不少': 3, '負責': 3, '不': 3, '主人': 3, '而': 3, '毛髮': 3, '出': 3, '他': 3, '國人': 3, '成績': 3, '60': 3, '-': 3, '政黨': 3, '七年': 3, '公司': 2, '說明': 2, '事發': 2, '經過': 2, '一名': 2, '異狀': 2, '通知': 2, '呼叫': 2, '行': 2, '控': 2, '中心': 2, '拿': 2, '鑰匙': 2, '緊急停車': 2, '13': 2, '已': 2, '撞': 2, '防護': 2, '動作': 2, '10': 2, '時間': 2, '50': 2, '進入': 2, '吊臂': 2, '區': 2, '保全': 2, '確認': 2, '花': 2, '月台': 2, '20': 2, '22': 2, '關門': 2, '約': 2, '開': 2, '啟': 2, '開始': 2, '45': 2, '48': 2, '偵測': 2, '及': 2, '行駛': 2, '圖': 2, '記者': 2, '陳': 2, '秋': 2, '雲': 2, '攝影': 2, '說話': 2, '事情': 2, '得': 2, '旺': 2, '好運': 2, '嘴': 2, '？': 2, '你': 2, '水瓶座': 2, '靠': 2, '感覺': 2, '跟': 2, '總是': 2, '讓': 2, '射手座': 2, '別人': 2, '的話': 2, '自己': 2, '其實': 2, '雙子座': 2, '反應': 2, '對於': 2, '一隻': 2, '因': 2, '住院': 2, '一夜': 2, '白頭': 2, '原本': 2, '長': 2, '白毛': 2, '飼主': 2, '男子': 2, '養': 2, '黑色': 2, '這': 2, '牠': 2, '看': 2, '寵物': 2, '方法': 2, '公布': 2, '結果顯示': 2, '總': 2, '29': 2, '一個': 2, '以上': 2, '79': 2, '18': 2, '黨': 2, '表現': 2, '觀感': 2, '設計': 2, '電話': 2, '全國': 2, '昨天': 1, '外籍人士': 1, '隨即': 1, '員': 1, '手動': 1, '後': 1, '雖': 1, '仍': 1, '發生': 1, '1': 1, '死': 1, '傷': 1, '事故': 1, '序': 1, '如下': 1, '04': 1, '外': 1, '建': 1, '案': 1, '吊車': 1, '砸': 1, '隔音牆': 1, '進站': 1, '停妥': 1, '掉落': 1, '14': 1, '聽到': 1, '一場': 1, '聲響': 1, '回頭': 1, '24': 1, '40': 1, '察覺': 1, '對講機': 1, '站長': 1, '（': 1, '）': 1, '站立': 1, '旁邊': 1, '上下車': 1, '車廂': 1, '相關': 1, '查看': 1, '出現': 1, '大量': 1, '粉塵': 1, '外籍': 1, '30': 1, '離': 1, '32': 1, '異常': 1, '駕駛': 1, '蓋板': 1, '42': 1, '車': 1, '內': 1, '緊急': 1, '剎車': 1, '51': 1, '非': 1, '預期': 1, '54': 1, '早上': 1, '恢復': 1, '今': 1, '早': 1, '恢復正常': 1, '興富': 1, '發': 1, '有些': 1, '敢講': 1, '把': 1, '黑': 1, '成': 1, '白': 1, '明明': 1, '能': 1, '像': 1, '一樣': 1, '而且': 1, '放心': 1, '命理網': 1, '分享': 1, '這些': 1, '張': 1, '唬': 1, '爛': 1, '快': 1, '看看': 1, '那些': 1, '上榜': 1, '聽聽': 1, '就': 1, '千萬別': 1, '當真': 1, '不然': 1, '受傷': 1, '第三名': 1, '喜歡': 1, '行事': 1, '有時候': 1, '做': 1, '雖然': 1, '不是': 1, '有意': 1, '得罪': 1, '時候': 1, '起來': 1, '卻是': 1, '很大': 1, '問題': 1, '第二名': 1, '想法': 1, '比較': 1, '天真': 1, '過': 1, '可以': 1, '不用': 1, '認': 1, '知道': 1, '一舉一動': 1, '大家': 1, '清楚': 1, '令人': 1, '有種': 1, '做人': 1, '誠懇': 1, '第一名': 1, '頭腦': 1, '很快': 1, '且': 1, '聰穎': 1, '出了名': 1, '吃飯': 1, '一群': 1, '出來': 1, '不負責任': 1, '達到': 1, '某些': 1, '效果': 1, '誇大其辭': 1, '很多': 1, '事實': 1, '◎': 1, '本文': 1, '內容': 1, '獲': 1, '授權': 1, '未經': 1, '同意': 1, '禁止': 1, '取用': 1, '轉載': 1, '擔心': 1, '全黑': 1, '間': 1, '感到': 1, '溫暖': 1, '又': 1, '心疼': 1, '陸': 1, '媒': 1, '報導': 1, '江蘇': 1, '流浪狗': 1, '日前': 1, '意外': 1, '昏迷': 1, '十多天': 1, '出院': 1, '返家': 1, '時': 1, '竟然': 1, '愛犬': 1, '大體': 1, '現在': 1, '變成': 1, '黑白': 1, '參半': 1, '隻': 1, '從小': 1, '一直': 1, '家人': 1, '這段': 1, '吃': 1, '很少': 1, '每天': 1, '房間': 1, '轉': 1, '顯然': 1, '相當': 1, '牽掛': 1, '聽聞': 1, '此事': 1, '感動': 1, '網友': 1, '天使': 1, '汪': 1, '星': 1, '和': 1, '上帝': 1, '交易': 1, '用': 1, '一身': 1, '黑毛': 1, '換': 1, '平安': 1, '以後': 1, '加倍': 1, '待': 1, '喔': 1, '最重': 1, '情': 1, '重': 1, '義': 1, '動物': 1, '想': 1, '可愛': 1, '萌': 1, '寵': 1, '健康': 1, '保健': 1, '資訊': 1, '教養': 1, '帶': 1, '們': 1, '去': 1, '哪': 1, '吃喝玩樂': 1, '快來': 1, '加入': 1, '部落': 1, '粉絲團': 1, '！': 1, '點': 1, '我': 1, '前往': 1, 'https': 1, 'www': 1, 'facebook': 1, 'com': 1, 'udnpet': 1, '將': 1, '滿': 1, '董事長': 1, '傳達': 1, '重要': 1, '訊息': 1, '那': 1, '全民': 1, '總評': 1, '價': 1, '勉強': 1, '及格': 1, '濃濃的': 1, '功勞': 1, '苦勞': 1, '味道': 1, '細': 1, '項': 1, '顯示': 1, '28': 1, '受訪者': 1, '80': 1, '還': 1, '算': 1, '61': 1, '普普通通': 1, '16': 1, '不太好': 1, '59': 1, '6': 1, '一點': 1, '不好': 1, '0': 1, '49': 1, '從政': 1, '支持': 1, '傾向': 1, '截然不同': 1, '具體': 1, '地': 1, '講': 1, '民進黨': 1, '47': 1, '國民黨': 1, '15': 1, '民': 1, '眾': 1, '時代': 1, '力量': 1, '65': 1, '中性': 1, '選民': 1, '57': 1, '呈現': 1, '五光十色': 1, '年齡': 1, '教育': 1, '省籍': 1, '階級': 1, '居住地': 1, '這本': 1, '一個多元': 1, '民主': 1, '社會': 1, '常態': 1, '已經': 1, '期盼': 1, '獲得': 1, '接下來': 1, '四年': 1, '或': 1, '更': 1, '久': 1, '機會': 1, '而言': 1, '眼前': 1, '整體': 1, '的確': 1, '諸多': 1, '值得': 1, '反省': 1, '警惕': 1, '之': 1, '處': 1, '本次': 1, '調查': 1, '由': 1, '問卷': 1, '報告': 1, '撰寫': 1, '山水': 1, '研究': 1, '接受': 1, '委託': 1, '主要': 1, '訪談': 1, '統計分析': 1, '訪問期間': 1, '5': 1, '月': 1, '8': 1, '日': 1, '兩天': 1, '對象': 1, '範圍': 1, '歲': 1, '成年人': 1, '住宅': 1, '用戶': 1, '架構': 1, '系統抽樣': 1, '加': 1, '尾數': 1, '兩碼': 1, '隨機': 1, '方式': 1, '有效': 1, '樣本': 1, '1076': 1, '抽樣誤差': 1, '95': 1, '信心': 1, '水準': 1, '下': 1, '正負': 1, '3': 1, '個': 1, '百分點': 1, '／': 1, '提供': 1}\n"
+          ]
+        }
       ]
     }
   ]
